# json-packer

./: .gitignore  LICENSE  README.md
.github/workflows/: napi-build.yml
core/: Cargo.toml  README.md
core-cli/: Cargo.toml
core-cli/src/: cli.rs  error.rs  main.rs
core-cli/src/commands/: batch.rs  compress.rs  decompress.rs  info.rs  mod.rs
core-cli/src/utils/: format.rs  io.rs  mod.rs  stats.rs
core-cli/tests/: integration_tests.rs
core-demo/: Cargo.toml  test_large.json
core-demo/src/: main.rs
core/src/: base64util.rs  bitstream.rs  decode.rs  dict.rs  encode.rs  error.rs  header.rs  huffman.rs  lib.rs  pool.rs  types.rs  varint.rs
core/tests/: base64.rs  determinism.rs  errors.rs  errors_pool.rs  integration_pool_roundtrip.rs  property_roundtrip.rs  roundtrip.rs  unit_base64util.rs  unit_bitstream.rs  unit_dict.rs  unit_error.rs  unit_header.rs  unit_huffman.rs  unit_pool.rs  unit_types.rs  unit_varint.rs
napi/: Cargo.toml  README.md  package.json  test.js
napi-demo/: index.js  package.json  test.json
napi/src/: lib.rs
wasm/: Cargo.toml  README.md  build.js  compress.js  package.json
wasm-demo/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
wasm-demo/src/: main.ts  vite-env.d.ts
wasm/src/: lib.rs
