[package]
name = "json-packer-core"
version = "0.1.0"
edition = "2024"
authors = ["Elecmonkey"]
description = "Reversible JSON binary compression/decompression library with Huffman-encoded keys and optional string value pooling"
repository = "https://github.com/elecmonkey/json-packer"
homepage = "https://json.edev.uno"
documentation = "https://docs.rs/json-packer-core"
readme = "README.md"
license = "MIT"
keywords = ["json", "compression", "binary", "huffman", "serialization"]
categories = ["compression", "encoding", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"
smallvec = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
