[package]
name = "json-packer"
version = "0.1.0"
edition = "2024"
authors = ["Elecmonkey"]
description = "Reversible JSON binary compression/decompression library with Huffman-encoded keys and optional string value pooling"
repository = "https://github.com/elecmonkey/json-packer"
homepage = "https://json.edev.uno"
documentation = "https://docs.rs/json-packer"
readme = "README.md"
license = "MIT"
keywords = ["json", "compression", "binary", "huffman", "serialization"]
categories = ["compression", "encoding", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
base64 = "0.22"
thiserror = "1"
smallvec = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = "z"     # 最大化体积优化
lto = true          # 链接时优化
codegen-units = 1   # 单个代码生成单元，更好的优化
panic = "abort"     # 减少panic处理代码
strip = true        # 移除调试符号
