[package]
name = "json-packer-napi"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Node.js N-API bindings for json-packer - A high-performance JSON compression library"
authors = ["Elecmonkey"]
repository = "https://github.com/elecmonkey/json-packer"
homepage = "https://json.edev.uno/"
documentation = "https://json.edev.uno/"
readme = "README.md"
keywords = ["json", "compression", "napi", "nodejs", "performance"]
categories = ["compression", "api-bindings", "development-tools"]

[lib]
crate-type = ["cdylib"]

[dependencies]
json-packer = { path = "../core" }
serde_json = "1"
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
